cm4all-beng-proxy (0.6.1) unstable; urgency=low

  * session: consistently lock all session objects
  * rewrite-uri: check if widget_external_uri() returns NULL
  * widget-uri: don't generate the "path" argument when it's NULL

 --

cm4all-beng-proxy (0.6) unstable; urgency=low

  * inline-widget: check the widget HTTP response status
  * response: don't apply transformation on failed response
  * resource-address: include pipe arguments in filter cache key
  * handler: removed session redirect on the first request
  * http-cache: accept ETag response header instead of Last-Modified
  * filter-cache: don't require Last-Modified or Expires
  * file-handler: disable ETag only when processor comes first
  * file-handler: read ETag from xattr
  * pipe: generate new ETag for piped resource
  * session: purge sessions when shared memory is full
  * handler: don't enforce sessions for filtered responses

 -- Max Kellermann <mk@cm4all.com>  Tue, 30 Jun 2009 17:48:20 +0200

cm4all-beng-proxy (0.5.14) unstable; urgency=low

  * ajp-client: implemented request body
  * cookie-client: obey "max-age=0" properly
  * processor: forward the original HTTP status
  * response, widget-http: don't allow processing resource without body
  * widget-http: check the Content-Type before invoking processor
  * response: pass the "Location" response header
  * debian: added a separate -optimized-dbg package
  * added init script support for multiple ports (--port) and multiple listen
    (--listen) command line argumnents
  * translation: added the "APPEND" packet for command line arguments
  * pipe: support command line arguments

 -- Max Kellermann <mk@cm4all.com>  Mon, 29 Jun 2009 16:51:16 +0200

cm4all-beng-proxy (0.5.13) unstable; urgency=low

  * widget-registry: clear local_address in translate request
  * cmdline: added the "--listen" option

 -- Max Kellermann <mk@cm4all.com>  Wed, 24 Jun 2009 12:27:17 +0200

cm4all-beng-proxy (0.5.12) unstable; urgency=low
