@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.6.1) unstable; urgency=low
   * session: consistently lock all session objects
   * rewrite-uri: check if widget_external_uri() returns NULL
   * widget-uri: don't generate the "path" argument when it's NULL
+  * widget-uri: strip superfluous question mark from widget_base_address()
 
  --
 
